# TestIssue

./: CMakeLists.txt  CMakeSettings.json  README.md  TypeUtils.cpp  TypeUtils.h  Utils.h  main.cpp
TestMethods/: BaseMethod.h  CalculateChecksumMethod.cpp  CalculateChecksumMethod.h  CalculateWordMethod.cpp  CalculateWordMethod.h  TestMethodsFactory.h
